--- a/views/_block/header.html
+++ b/views/_block/header.html
@@ -119,7 +119,7 @@
 
                             <i class="menu-item-icon fa fa-fw fa-home"></i> <br/>
 
-                            首页
+                            Home
                         </a>
                     </li>
 
@@ -128,29 +128,27 @@
 
                             <i class="menu-item-icon fa fa-fw fa-th"></i> <br/>
 
-                            分类
+                            Categories
                         </a>
                     </li>
 
                     <li class="menu-item menu-item-tags">
                         <a href="/tags/" rel="section">
-                            <i class="menu-item-icon fa fa-fw fa-tags"></i> <br/>标签
+                            <i class="menu-item-icon fa fa-fw fa-tags"></i> <br/>Tags
                         </a>
                     </li>
 
                     <!--<li class="menu-item menu-item-archives">-->
                     <!--<a href="/archives/" rel="section">-->
-
                     <!--<i class="menu-item-icon fa fa-fw fa-archive"></i> <br/>-->
-
-                    <!--归档-->
+                    <!--Archives-->
                     <!--</a>-->
                     <!--</li>-->
 
                     <li class="menu-item menu-item-about">
                         <a href="/pages/about/" rel="section">
                             <i class="menu-item-icon fa fa-fw fa-user"></i> <br/>
-                            关于
+                            About
                         </a>
                     </li>
 
@@ -161,7 +159,7 @@
 
                     <!--<i class="menu-item-icon fa fa-search fa-fw"></i> <br/>-->
 
-                    <!--搜索-->
+                    <!--search-->
                     <!--</a>-->
                     <!--</li>-->
 
@@ -180,7 +178,7 @@
     </span>
                             <div class="local-search-input-wrapper">
                                 <input autocomplete="off"
-                                       placeholder="搜索..." spellcheck="false"
+                                       placeholder="Search..." spellcheck="false"
                                        type="text" id="local-search-input">
                             </div>
                         </div>
