--- a/views/categories/show.html
+++ b/views/categories/show.html
@@ -1,5 +1,5 @@
 {{define "categories/show"}}
-{{template "header" .}}
+{{template "_block/header" .}}
 <main id="main" class="main">
     <div class="main-inner">
         <div class="content-wrap">
@@ -44,6 +44,23 @@
 
                 </div>
 
+                <nav class="pagination">
+                    {{if gt .Pagination.PageNums 1}}
+                    {{if .Pagination.HasPrev}}
+                    <a class="extend prev" rel="prev" href="{{.Pagination.PageLinkFirst}}"><i class="fa fa-angle-left"></i></a>
+                    {{end}}
+                    {{range $index, $page := .Pagination.Pages}}
+                    {{if $.Pagination.IsActive $page}}
+                    <span class="page-number current">{{$page}}</span>
+                    {{else}}
+                    <a class="page-number" href="{{$.Pagination.PageLink $page}}">{{$page}}</a>
+                    {{end}}
+                    {{end}}
+                    {{if .Pagination.HasNext}}
+                    <a class="extend next" rel="next" href="{{.Pagination.PageLinkNext}}"><i class="fa fa-angle-right"></i></a>
+                    {{end}}
+                    {{end}}
+                </nav>
 
             </div>
 
